# bare_err_tree

./: CONTRIBUTING.md  Cargo.toml  README.md  mutex_queue
.github/: dependabot.yml
.github/workflows/: all-tests.yml  cargo-tag.yml  pages.yml
bare_err_tree/: Cargo.toml
bare_err_tree/examples/: nesting.rs  simple_derive.rs
bare_err_tree/src/: buffer.rs  flex.rs  fmt_logic.rs  json.rs  lib.rs  pkg.rs
bare_err_tree/test_cases/json/: Cargo.toml
bare_err_tree/test_cases/std/: Cargo.toml
bare_err_tree/test_cases/std/fail_src/: container.stderr  direct_enum.rs  direct_enum.stderr  direct_union.rs  direct_union.stderr  early_clone_derive.rs  early_clone_derive.stderr  false_tree.rs  false_tree.stderr  false_tree_iter.rs  false_tree_iter.stderr  single.rs  single.stderr
bare_err_tree/test_cases/trace/: Cargo.toml
bare_err_tree/tests/: derive_compile_fails.rs  json.rs  pretty_tracing.rs  shared.rs  std.rs  tracing.rs
bare_err_tree_proc/: Cargo.toml
bare_err_tree_proc/src/: boiler.rs  errtype.rs  fields.rs  lib.rs
bare_err_tree_proc/tests/: example.rs
coverage/: index.html
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
docs/bare_err_tree/: all.html  attr.err_tree.html  enum.JsonErr.html  fn.print_tree.html  fn.reconstruct_output.html  fn.tree_to_json.html  fn.tree_unwrap.html  index.html  macro.tree.html  sidebar-items.js  struct.AdaptWrite.html  struct.ErrTree.html  struct.ErrTreeDisplay.html  struct.ErrTreeJson.html  struct.ErrTreePkg.html  struct.InnerErrTreePkg.html  trait.AsErrTree.html
docs/bare_err_tree_proc/: all.html  attr.err_tree.html  index.html  sidebar-items.js
docs/cfg_if/: all.html  index.html  macro.cfg_if.html
docs/eyre/: all.html  fn.Ok.html  fn.set_hook.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  macro.eyre.html  macro.format_err.html  struct.Chain.html  struct.DefaultHandler.html  struct.InstallError.html  struct.Report.html  trait.ContextCompat.html  trait.EyreHandler.html  trait.OptionExt.html  trait.WrapErr.html  type.Result.html
docs/indenter/: all.html  enum.Format.html  fn.indented.html  index.html  struct.Indented.html  type.Inserter.html
docs/itoa/: all.html  index.html  struct.Buffer.html  trait.Integer.html
docs/lazy_static/: all.html  fn.initialize.html  index.html  macro.lazy_static.html  trait.LazyStatic.html
docs/memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
docs/once_cell/: all.html  index.html
docs/pin_project_lite/: all.html  index.html  macro.pin_project.html
docs/proc_macro2/: all.html  enum.Delimiter.html  enum.Spacing.html  enum.TokenTree.html  index.html  struct.Group.html  struct.Ident.html  struct.LexError.html  struct.Literal.html  struct.Punct.html  struct.Span.html  struct.TokenStream.html
docs/quote/: all.html  index.html  macro.format_ident.html  macro.quote.html  macro.quote_spanned.html  trait.IdentFragment.html  trait.ToTokens.html  trait.TokenStreamExt.html
docs/ryu/: all.html  index.html  struct.Buffer.html  trait.Float.html
docs/serde/: all.html  derive.Deserialize.html  derive.Serialize.html  index.html  macro.forward_to_deserialize_any.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
docs/serde_derive/: all.html  derive.Deserialize.html  derive.Serialize.html  index.html
docs/serde_json/: all.html  enum.Value.html  fn.from_slice.html  fn.from_str.html  fn.from_value.html  fn.to_string.html  fn.to_string_pretty.html  fn.to_value.html  fn.to_vec.html  fn.to_vec_pretty.html  index.html  macro.json.html  struct.Deserializer.html  struct.Error.html  struct.Map.html  struct.Number.html  struct.StreamDeserializer.html  type.Result.html
docs/sharded_slab/: all.html  index.html  struct.DefaultConfig.html  struct.Entry.html  struct.OwnedEntry.html  struct.Pool.html  struct.Slab.html  struct.UniqueIter.html  struct.VacantEntry.html  trait.Clear.html  trait.Config.html
docs/syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  macro.bracketed.html  (+168 more)
docs/thread_local/: all.html  index.html  struct.CachedIntoIter.html  struct.CachedIterMut.html  struct.CachedThreadLocal.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.ThreadLocal.html
docs/tracing/: all.html  index.html  macro.debug.html  macro.debug_span.html  macro.enabled.html  macro.error.html  macro.error_span.html  macro.event.html  macro.event_enabled.html  macro.info.html  macro.info_span.html  macro.span.html  macro.span_enabled.html  macro.trace.html  macro.trace_span.html  (+10 more)
examples/: nesting.rs
impl/: Cargo.toml
proc/: Cargo.toml
proc/src/: boiler.rs  errtype.rs  fields.rs  lib.rs
testing/: Cargo.toml
testing/fail_src/: container.rs  container.stderr  direct_enum.stderr  direct_union.stderr  early_clone_derive.stderr  false_tree.stderr  false_tree_iter.stderr  single.stderr
testing_trace/: Cargo.toml
(+886 files in other folders)
