[workspace]
resolver = "2"
members = ["bare_err_tree", "bare_err_tree_proc"]

[workspace.package]
authors = ["Bennett Petzold <dansecob.dev@gmail.com>"]
edition = "2021"
rust-version = "1.81"
description = "Display errors as a formatted tree"
repository = "https://github.com/Bennett-Petzold/bare_err_tree"
license = "MPL-2.0"
categories = ["no-std::no-alloc", "development-tools::debugging", "rust-patterns"]
keywords = ["error", "tree", "printing"]
readme = "README.md"
