[package]
name = "bare_err_tree"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["derive"]
derive = ["dep:bare_err_tree_proc"]
derive_alloc = ["derive", "bare_err_tree_proc/alloc"]
heap_buffer = []
source_line = []

[dependencies]
bare_err_tree_proc = { version = "0.1.0", path = "../bare_err_tree_proc", optional = true }
