[package]
name = "bare_err_tree_proc"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = []
alloc = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["extra-traits"] }

[dev-dependencies]
bare_err_tree = { path = "../bare_err_tree" }
