[package]
name = "bare_err_tree_proc"
version = "0.1.0"
edition = "2021"

[features]
default = []
alloc = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# Extra traits for dev
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
bare_err_tree = { path = "../bare_err_tree" }
