[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
bare_err_tree = { path = "../bare_err_tree", features = ["derive_alloc", "source_line"] }
thiserror = "2.0.6"

[[bin]]
name = "derive_testing"

[[bin]]
name = "example"

[[bin]]
name = "empty"


[[bin]]
name = "near-empty"
