[package]
name = "testing_trace"
version = "0.1.0"
edition = "2021"

[dependencies]
bare_err_tree = { path = "../bare_err_tree", features = ["derive_alloc", "source_line", "tracing"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-error = "0.2"
tracing-subscriber = "0.3.18"

[[bin]]
name = "trace_example"
