[package]
name = "testing_trace"
version = "0.1.0"
edition = "2021"

[dependencies]
bare_err_tree = { path = "../bare_err_tree", features = ["derive_alloc", "source_line", "tracing"] }
thiserror = "2.0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"

[[bin]]
name = "trace_example"

[[bin]]
name = "near-empty"
