[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[dependencies]
bare_err_tree = { path = "../../", features = ["derive_alloc", "source_line", "tracing", "json"] }
thiserror = "2.0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"
serde = { version = "1", default-features = false }

[workspace]

[[bin]]
name = "example"
