[package]
name = "trace"
version = "0.1.0"
edition = "2021"

[dependencies]
bare_err_tree = { path = "../../", features = ["derive", "source_line", "tracing"] }
thiserror = "2.0.7"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"

[workspace]

[[bin]]
name = "trace_example"

[[bin]]
name = "near-empty"

[[bin]]
name = "trailing"
